unpackaged/main/default/objects/Contact/fields/Adresse__c.field-meta.xml
<CustomField>
    <fullName>Adresse__c</fullName>
    <label>Adresse (-Facturation-)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>