unpackaged/main/default/objects/Contact/fields/Adresse_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Livraison__c</fullName>
    <label>Adresse (-Livraison-)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>