unpackaged/main/default/objects/Contact/fields/AdresseEmailPersonnelle__c.field-meta.xml
<CustomField>
    <fullName>AdresseEmailPersonnelle__c</fullName>
    <label>Adresse e-mail personnelle</label>
    <type>Email</type>
</CustomField>