unpackaged/main/default/objects/Contact/fields/CadeauFinAnnee__c.field-meta.xml
<CustomField>
    <fullName>CadeauFinAnnee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cadeau fin d&#39;année</label>
    <type>Checkbox</type>
</CustomField>