unpackaged/main/default/objects/Contact/fields/Carte__c.field-meta.xml
<CustomField>
    <fullName>Carte__c</fullName>
    <formula>IMAGE( 

&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; + 
Ligne1__c + &quot;,&quot; + 
IF ( NOT ( ISBLANK (Ligne2__c)), Ligne2__c + &quot;,&quot;, &quot;&quot; ) + 
IF ( NOT ( ISBLANK (Ligne3__c)), Ligne3__c + &quot;,&quot;, &quot;&quot; ) + 
IF ( NOT ( ISBLANK (Ligne4__c)), Ligne4__c + &quot;,&quot;, &quot;&quot; ) + 
IF ( NOT ( ISBLANK (TEXT(Province__c))), TEXT(Province__c) + &quot;,&quot;, &quot;&quot; ) + 
CodePostal__c + &quot;+&quot; + Ville__c + &quot;,&quot; + 
TEXT ( Pays__c ) + 
&quot;&amp;zoom=13&amp;size=250x250&amp;markers=color:red|&quot; + 
Ligne1__c + &quot;+&quot; + 
IF ( NOT ( ISBLANK (Ligne2__c)), Ligne2__c + &quot;,&quot;, &quot;&quot; ) + 
IF ( NOT ( ISBLANK (Ligne3__c)), Ligne3__c + &quot;,&quot;, &quot;&quot; ) + 
IF ( NOT ( ISBLANK (Ligne4__c)), Ligne4__c + &quot;,&quot;, &quot;&quot; ) + 
IF ( NOT ( ISBLANK (TEXT(Province__c))), TEXT(Province__c) + &quot;,&quot;, &quot;&quot; ) + 
CodePostal__c + &quot;+&quot; + Ville__c + &quot;,&quot; + 
TEXT ( Pays__c ) + 
&quot;&amp;sensor=true&quot; 

, $Label.CON_Carte_AucuneCarteDispo , 250, 250)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carte</label>
    <type>Text</type>
</CustomField>