unpackaged/main/default/objects/Contact/fields/Check_CodePostalFacturation__c.field-meta.xml
<CustomField>
    <fullName>Check_CodePostalFacturation__c</fullName>
    <formula>if
(
LEN( Code_Postal_Facturation__c ) &lt;=10
,
true
,
false
)</formula>
    <label>Check_CodePostalFacturation</label>
    <type>Checkbox</type>
</CustomField>