unpackaged/main/default/objects/Contact/fields/Check_CodepostalLivraison__c.field-meta.xml
<CustomField>
    <fullName>Check_CodepostalLivraison__c</fullName>
    <formula>if
(
LEN( Code_Postal_Livraison__c )&lt;=10
,
true
,
false
)</formula>
    <label>Check_CodepostalLivraison</label>
    <type>Checkbox</type>
</CustomField>