unpackaged/main/default/objects/Contact/fields/Check_Ligne1Facturation__c.field-meta.xml
<CustomField>
    <fullName>Check_Ligne1Facturation__c</fullName>
    <formula>if
(
LEN( Ligne1_Facturation__c )&lt;=40
,
true
,
false
)</formula>
    <label>Check_Ligne1Facturation</label>
    <type>Checkbox</type>
</CustomField>