unpackaged/main/default/objects/Contact/fields/Check_Ligne1Livraison__c.field-meta.xml
<CustomField>
    <fullName>Check_Ligne1Livraison__c</fullName>
    <formula>if
(
LEN( Ligne1_Livraison__c )&lt;=60
,
TRUE
,
FALSE
)</formula>
    <label>Check_Ligne1Livraison</label>
    <type>Checkbox</type>
</CustomField>