unpackaged/main/default/objects/Contact/fields/Check_Ligne2Facturation__c.field-meta.xml
<CustomField>
    <fullName>Check_Ligne2Facturation__c</fullName>
    <formula>if
(
LEN( Ligne_2_Facturation__c )&lt;=40
,
TRUE
,
FALSE
)</formula>
    <label>Check_Ligne2Facturation</label>
    <type>Checkbox</type>
</CustomField>