unpackaged/main/default/objects/Contact/fields/Check_Ligne2Livraison__c.field-meta.xml
<CustomField>
    <fullName>Check_Ligne2Livraison__c</fullName>
    <formula>if
(
LEN( Ligne2_Livraison__c )&lt;=40
,
true
,
false
)</formula>
    <label>Check_Ligne2Livraison</label>
    <type>Checkbox</type>
</CustomField>