unpackaged/main/default/objects/Contact/fields/Check_Ligne3Facturation__c.field-meta.xml
<CustomField>
    <fullName>Check_Ligne3Facturation__c</fullName>
    <formula>if
(
LEN( Ligne_3_Facturation__c )&lt;=40
,
true
,
false
)</formula>
    <label>Check_Ligne3Facturation</label>
    <type>Checkbox</type>
</CustomField>