unpackaged/main/default/objects/Contact/fields/Check_VilleFacturation__c.field-meta.xml
<CustomField>
    <fullName>Check_VilleFacturation__c</fullName>
    <formula>if
(
LEN( Ville_Facturation__c )&lt;=40
,
true
,
false)</formula>
    <label>Check_VilleFacturation</label>
    <type>Checkbox</type>
</CustomField>