unpackaged/main/default/objects/Contact/fields/Check_VilleLivraison__c.field-meta.xml
<CustomField>
    <fullName>Check_VilleLivraison__c</fullName>
    <formula>if
(
 LEN(Ville_Livraison__c) &lt;=40
,
true
,
false
)</formula>
    <label>Check_VilleLivraison</label>
    <type>Checkbox</type>
</CustomField>