unpackaged/main/default/objects/Contact/fields/Code_Postal_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal_Facturation__c</fullName>
    <label>Code Postal (-Facturation-)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>