unpackaged/main/default/objects/Contact/fields/Code_Postal_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal_Livraison__c</fullName>
    <label>Code Postal (-Livraison-)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>