unpackaged/main/default/objects/Contact/fields/CodePostal__c.field-meta.xml
<CustomField>
    <fullName>CodePostal__c</fullName>
    <label>Code Postal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>