unpackaged/main/default/objects/Contact/fields/CommentairesInfosPerso__c.field-meta.xml
<CustomField>
    <fullName>CommentairesInfosPerso__c</fullName>
    <label>Commentaires</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>