unpackaged/main/default/objects/Contact/fields/Contact_Community__c.field-meta.xml
<CustomField>
    <fullName>Contact_Community__c</fullName>
    <label>Contact Community</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Opérationnel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>