unpackaged/main/default/objects/Contact/fields/ContactVIP__c.field-meta.xml
<CustomField>
    <fullName>ContactVIP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact VIP/Irréductible</label>
    <type>Checkbox</type>
</CustomField>