unpackaged/main/default/objects/Contact/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>if(isblank(  LastName ),&#39;Nom,&#39;,&#39;&#39;) + &#39; &#39; +
if(isblank( Email ),&#39;Adresse e-mail,&#39;,&#39;&#39;) + &#39; &#39; +
if(isblank( text( Fonction__c)  ),&#39;Fonction,&#39;,&#39;&#39;) + &#39; &#39; +
if(AND(isblank(  Phone ),ISBLANK( MobilePhone )),&#39;Téléphone,&#39;,&#39;&#39;) + &#39; &#39; +
if(isblank(  text(ServiceDepartement__c)  ),&#39;Service/département&#39;,&#39;&#39;)</formula>
    <label>Data Quality - Description</label>
    <type>Text</type>
</CustomField>