unpackaged/main/default/objects/Contact/fields/Data_Quality_Score__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Score__c</fullName>
    <formula>if((isblank( LastName )),0,0.2) +
if((isblank( Email )),0,0.2) + 
if((isblank( text( Fonction__c)) ),0,0.2) +
if(AND((isblank( Phone )),(ISBLANK( MobilePhone ))),0,0.2) + 
if((isblank( text(ServiceDepartement__c) )),0,0.2)</formula>
    <label>Data Quality - Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>