unpackaged/main/default/objects/Contact/fields/Date_Email_consent__c.field-meta.xml
<CustomField>
    <fullName>Date_Email_consent__c</fullName>
    <label>Date Email consent</label>
    <type>Date</type>
</CustomField>