unpackaged/main/default/objects/Contact/fields/Email_consent__c.field-meta.xml
<CustomField>
    <fullName>Email_consent__c</fullName>
    <label>Email consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>