unpackaged/main/default/objects/Contact/fields/Email_Intervenant__c.field-meta.xml
<CustomField>
    <fullName>Email_Intervenant__c</fullName>
    <label>Email Intervenant</label>
    <type>Email</type>
</CustomField>