unpackaged/main/default/objects/Contact/fields/Fonction__c.field-meta.xml
<CustomField>
    <fullName>Fonction__c</fullName>
    <inlineHelpText>Function as defined in the PF qualification</inlineHelpText>
    <label>Fonction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrateur</fullName>
            </value>
            <value>
                <fullName>Assistant</fullName>
            </value>
            <value>
                <fullName>Directeur</fullName>
            </value>
            <value>
                <fullName>Employé</fullName>
            </value>
            <value>
                <fullName>Gérant</fullName>
            </value>
            <value>
                <fullName>Particulier</fullName>
            </value>
            <value>
                <fullName>Propriétaire</fullName>
            </value>
            <value>
                <fullName>Responsable</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Technicien</fullName>
            </value>
            <value>
                <fullName>Chef d&#39;atelier</fullName>
            </value>
            <value>
                <fullName>DIRECTEUR DE SITE</fullName>
            </value>
            <value>
                <fullName>AGENT D&#39;EXPLOITATION</fullName>
            </value>
            <value>
                <fullName>AIDE EXPLOITANT</fullName>
            </value>
            <value>
                <fullName>APPRENTI CARROSSIER</fullName>
            </value>
            <value>
                <fullName>APPRENTI CARROSSIER PEINTRE</fullName>
            </value>
            <value>
                <fullName>APPRENTI COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>APPRENTI EXPLOITANT</fullName>
            </value>
            <value>
                <fullName>APPRENTI FRIGORISTE</fullName>
            </value>
            <value>
                <fullName>APPRENTI MECANICIEN</fullName>
            </value>
            <value>
                <fullName>APPRENTIE SECRETAIRE</fullName>
            </value>
            <value>
                <fullName>ASSIST REGIONAL ASSURANCE RE</fullName>
            </value>
            <value>
                <fullName>ASSISTANCE DAGENCE</fullName>
            </value>
            <value>
                <fullName>ASSISTANT COMMERCIAL</fullName>
            </value>
            <value>
                <fullName>ASSISTANT EXPLOITATION</fullName>
            </value>
            <value>
                <fullName>ASSISTANT REGIONAL ASSURANCE</fullName>
            </value>
            <value>
                <fullName>ASSISTANT REGIONAL EXPLOITATION</fullName>
            </value>
            <value>
                <fullName>ASSISTANTE ADMINISTRATIVE</fullName>
            </value>
            <value>
                <fullName>ASSISTANTE COMMERCIALE</fullName>
            </value>
            <value>
                <fullName>ASSISTANTE COMMERCIALE REGIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>