unpackaged/main/default/objects/Contact/fields/Intf_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Intf_Sync_Status__c</fullName>
    <label>Statut Synchronisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Intf_Statut_Synchro</valueSetName>
    </valueSet>
</CustomField>