unpackaged/main/default/objects/Contact/fields/InvitationFootball__c.field-meta.xml
<CustomField>
    <fullName>InvitationFootball__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invitation Football</label>
    <type>Checkbox</type>
</CustomField>