unpackaged/main/default/objects/Contact/fields/Ligne1__c.field-meta.xml
<CustomField>
    <fullName>Ligne1__c</fullName>
    <label>Ligne 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>