unpackaged/main/default/objects/Contact/fields/Ligne1_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Ligne1_Facturation__c</fullName>
    <label>Ligne 1 - Facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>