unpackaged/main/default/objects/Contact/fields/Ligne1_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Ligne1_Livraison__c</fullName>
    <label>Ligne 1 - Livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>