unpackaged/main/default/objects/Contact/fields/Ligne2_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Ligne2_Livraison__c</fullName>
    <label>Ligne 2 - Livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>