unpackaged/main/default/objects/Contact/fields/Ligne3_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Ligne3_Livraison__c</fullName>
    <label>Ligne 3 - Livraison</label>
    <length>255</length>
    <type>Text</type>
</CustomField>