unpackaged/main/default/objects/Contact/fields/Ligne4__c.field-meta.xml
<CustomField>
    <fullName>Ligne4__c</fullName>
    <label>Ligne 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>