unpackaged/main/default/objects/Contact/fields/Ligne_3_Facturation__c.field-meta.xml
<CustomField>
    <fullName>Ligne_3_Facturation__c</fullName>
    <label>Ligne 3 - Facturation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>