unpackaged/main/default/objects/Contact/fields/Mobilite__c.field-meta.xml
<CustomField>
    <fullName>Mobilite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mobilité</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>