unpackaged/main/default/objects/Contact/fields/ModeCreation__c.field-meta.xml
<CustomField>
    <fullName>ModeCreation__c</fullName>
    <label>Mode de création</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Création manuelle</fullName>
                <default>true</default>
                <label>Création manuelle</label>
            </value>
            <value>
                <fullName>Import en masse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>