unpackaged/main/default/objects/Contact/fields/ModedePaiement__c.field-meta.xml
<CustomField>
    <fullName>ModedePaiement__c</fullName>
    <label>Mode de Paiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carte Bancaire</fullName>
                <default>true</default>
                <label>Carte Bancaire</label>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Espèces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>