unpackaged/main/default/objects/Contact/fields/Ne_Pas_Diffuser_Aux_Partenaires__c.field-meta.xml
<CustomField>
    <fullName>Ne_Pas_Diffuser_Aux_Partenaires__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne Pas Diffuser Aux Partenaires</label>
    <type>Checkbox</type>
</CustomField>