unpackaged/main/default/objects/Contact/fields/Next_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Next_Birthday__c</fullName>
    <formula>IF(TODAY()&gt;DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)),DATE(YEAR(TODAY())+1,MONTH(Birthdate),DAY(Birthdate)),DATE(YEAR(TODAY()),MONTH(Birthdate),DAY(Birthdate)))</formula>
    <label>Next Birthday</label>
    <type>Date</type>
</CustomField>