unpackaged/main/default/objects/Contact/fields/Numero_tel_domicile__c.field-meta.xml
<CustomField>
    <fullName>Numero_tel_domicile__c</fullName>
    <label>Numéro tél domicile</label>
    <type>Phone</type>
</CustomField>