unpackaged/main/default/objects/Contact/fields/Numero_tel_mobile_personnel__c.field-meta.xml
<CustomField>
    <fullName>Numero_tel_mobile_personnel__c</fullName>
    <label>Numéro tél mobile personnel</label>
    <type>Phone</type>
</CustomField>