unpackaged/main/default/objects/Contact/fields/NumeroContact__c.field-meta.xml
<CustomField>
    <fullName>NumeroContact__c</fullName>
    <displayFormat>GF-CON-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>Numéro du système, incrémenté automatiquement</inlineHelpText>
    <label>Numéro du contact</label>
    <type>AutoNumber</type>
</CustomField>