unpackaged/main/default/objects/Contact/fields/OK_Interface__c.field-meta.xml
<CustomField>
    <fullName>OK_Interface__c</fullName>
    <formula>SAP_ID__c = null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OK Interface</label>
    <type>Checkbox</type>
</CustomField>