unpackaged/main/default/objects/Contact/fields/Pays__c.field-meta.xml
<CustomField>
    <fullName>Pays__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AFRIQUE DU SUD</fullName>
            </value>
            <value>
                <fullName>ALBANIE</fullName>
            </value>
            <value>
                <fullName>ALGERIE</fullName>
            </value>
            <value>
                <fullName>ALLEMAGNE</fullName>
            </value>
            <value>
                <fullName>ANDORRE</fullName>
            </value>
            <value>
                <fullName>ANGOLA</fullName>
            </value>
            <value>
                <fullName>ARABIE SAOUDITE</fullName>
            </value>
            <value>
                <fullName>ARGENTINE</fullName>
            </value>
            <value>
                <fullName>ARMENIE</fullName>
            </value>
            <value>
                <fullName>AUSTRALIE</fullName>
            </value>
            <value>
                <fullName>AUTRICHE</fullName>
            </value>
            <value>
                <fullName>BAHREIN</fullName>
            </value>
            <value>
                <fullName>BELARUS</fullName>
            </value>
            <value>
                <fullName>BELGIQUE</fullName>
            </value>
            <value>
                <fullName>BENIN</fullName>
            </value>
            <value>
                <fullName>BERMUDES</fullName>
            </value>
            <value>
                <fullName>BOLIVIE</fullName>
            </value>
            <value>
                <fullName>BOSNIE HERZEGOVINE</fullName>
            </value>
            <value>
                <fullName>BOTSWANA</fullName>
            </value>
            <value>
                <fullName>BRESIL</fullName>
            </value>
            <value>
                <fullName>BULGARIE</fullName>
            </value>
            <value>
                <fullName>BURKINA FASO</fullName>
            </value>
            <value>
                <fullName>CAMBODGE</fullName>
            </value>
            <value>
                <fullName>CAMEROUN</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CHILI</fullName>
            </value>
            <value>
                <fullName>CHINE</fullName>
            </value>
            <value>
                <fullName>CHYPRE</fullName>
            </value>
            <value>
                <fullName>CISJORDANIE</fullName>
            </value>
            <value>
                <fullName>COLOMBIE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>