unpackaged/main/default/objects/Contact/fields/Pays_Livraison__c.field-meta.xml
<CustomField>
    <fullName>Pays_Livraison__c</fullName>
    <label>Pays (-Livraison-) deprecated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__BillingCountry</valueSetName>
    </valueSet>
</CustomField>