unpackaged/main/default/objects/Contact/fields/PaysFacturation__c.field-meta.xml
<CustomField>
    <fullName>PaysFacturation__c</fullName>
    <label>Pays - Facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liste_Pays</valueSetName>
    </valueSet>
</CustomField>