unpackaged/main/default/objects/Contact/fields/PaysLivraison__c.field-meta.xml
<CustomField>
    <fullName>PaysLivraison__c</fullName>
    <label>Pays - Livraison</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liste_Pays</valueSetName>
    </valueSet>
</CustomField>