unpackaged/main/default/objects/Contact/fields/PeriodeDeContact__c.field-meta.xml
<CustomField>
    <fullName>PeriodeDeContact__c</fullName>
    <label>Période de contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Début de semaine</fullName>
            </value>
            <value>
                <fullName>Milieu de semaine</fullName>
            </value>
            <value>
                <fullName>Fin de semaine</fullName>
            </value>
            <value>
                <fullName>Indifférent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>