unpackaged/main/default/objects/Contact/fields/Piste_convertie__c.field-meta.xml
<CustomField>
    <fullName>Piste_convertie__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp;  TECH_ID_Piste__c ,TECH_ID_Piste__c )</formula>
    <label>Piste convertie</label>
    <type>Text</type>
</CustomField>