unpackaged/main/default/objects/Contact/fields/qualtrics__Last_Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__Last_Survey_Invitation__c</fullName>
    <label>Last Survey Invitation</label>
    <type>Date</type>
</CustomField>