unpackaged/main/default/objects/Contact/fields/qualtrics__QSC_Author_Id__c.field-meta.xml
<CustomField>
    <fullName>qualtrics__QSC_Author_Id__c</fullName>
    <externalId>true</externalId>
    <label>QSC Author Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>