unpackaged/main/default/objects/Contact/fields/Raison_sociale__c.field-meta.xml
<CustomField>
    <fullName>Raison_sociale__c</fullName>
    <formula>Account.Name</formula>
    <label>Raison sociale</label>
    <type>Text</type>
</CustomField>