unpackaged/main/default/objects/Contact/fields/RaisonInactivite__c.field-meta.xml
<CustomField>
    <fullName>RaisonInactivite__c</fullName>
    <label>Raison d&#39;inactivité</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Statut__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Changement société</fullName>
            </value>
            <value>
                <fullName>Décès</fullName>
            </value>
            <value>
                <fullName>Désactivation</fullName>
            </value>
            <value>
                <fullName>Doublon</fullName>
            </value>
            <value>
                <fullName>Retraite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>