unpackaged/main/default/objects/Contact/fields/RecopierAdresseCompte__c.field-meta.xml
<CustomField>
    <fullName>RecopierAdresseCompte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recopier l&#39;adresse principale du compte?</label>
    <type>Checkbox</type>
</CustomField>