unpackaged/main/default/objects/Contact/fields/RecopierAdresseExploitationCompte__c.field-meta.xml
<CustomField>
    <fullName>RecopierAdresseExploitationCompte__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Applicable uniquement pour les comptes prospects / clients, les comptes multi-niveaux, et les grands comptes</inlineHelpText>
    <label>Recopier l&#39;adresse d&#39;exploitation?</label>
    <type>Checkbox</type>
</CustomField>