unpackaged/main/default/objects/Contact/fields/record_type_name__c.field-meta.xml
<CustomField>
    <fullName>record_type_name__c</fullName>
    <formula>RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>record type name</label>
    <type>Text</type>
</CustomField>