unpackaged/main/default/objects/Contact/fields/SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SAP ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>