unpackaged/main/default/objects/Contact/fields/ShippingAddressDifferent__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddressDifferent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilisé pour qu&#39;un automatisme alimente l&#39;adresse de livraison avec l&#39;adresse de facturation</description>
    <label>Adresse de livraison différente</label>
    <type>Checkbox</type>
</CustomField>